# stringmop

./: .gitignore  pyproject.toml
src/stringmop/: fuzz.py  normalization.py  types.py
tests/: test_fuzz.py  test_normalization.py
