[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stringmop"
version = "0.1.0"
authors = [
  { name="Gabriel López Vinielles", email="glopezv95@gmail.com" },
]
description = "A string normalization and cleaning tool."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "unidecode",
    "rapidfuzz"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.urls]
Homepage = "https://github.com/glopezv95/stringmop"
Issues = "https://github.com/glopezv95/stringmop/issues"

[tool.setuptools.packages.find]
where = ["src"]